ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-local
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /service1
        pathType: Prefix
        backend:
          service:
            name: ingestion-service
            port:
              number: 8500
      - path: /service2
        pathType: Prefix
        backend:
          service:
            name: aggregation-service
            port:
              number: 7000
      - path: /service3
        pathType: Prefix
        backend:
          service:
            name: notification-service
            port:
              number: 80
      - path: /service4
        pathType: Prefix
        backend:
          service:
            name: kafka-local
            port:
              number: 9092
      - path: /service5
        pathType: Prefix
        backend:
          service:
            name: redis-local-master
            port:
              number: 6379
